# waypaper-engine

./: .gitignore  Cargo.toml  README.md  flake.nix  result
.github/workflows/: rust.yml
packaging/aur/: .SRCINFO  PKGBUILD  waypaper_engine.desktop
packaging/nix/: cli.nix  daemon.nix  default.nix  ui.nix
src/: app_state.rs  egl.rs  file_reading_utils.rs  list_outputs.rs  main.rs  mpv.rs  project.rs  scene.rs  scene_package.rs  tex_file.rs  wallpaper.rs  wl_renderer.rs
waypaper-engine-daemon/: Cargo.toml
waypaper-engine-daemon/src/: app_state.rs  ipc.rs  main.rs  scene.rs  serde_utils.rs  wl_renderer.rs
waypaper-engine-ui/: package.json  pnpm-lock.yaml
waypaper-engine-ui/src-tauri/: Cargo.toml  tauri.conf.json
waypaper-engine-ui/src-tauri/src/: main.rs  serde_utils.rs
waypaper_engine_cli/: Cargo.toml
waypaper_engine_cli/src/: main.rs
waypaper_engine_daemon/: Cargo.toml
waypaper_engine_daemon/src/: app_state.rs  egl.rs  file_reading_utils.rs  gl_utils.rs  gstreamer_video_wp_renderer.rs  main.rs  mpv.rs  mpv_video_wp_renderer.rs  profile_manager.rs  rendering_backends.rs  scene.rs  scene_package.rs  tex_file.rs  video_rs_wp_renderer.rs  video_wp_renderer.rs  video_wp_renderer2.rs  videors_video_wp_renderer.rs  wallpaper.rs  wallpaper_renderer.rs  wl_renderer.rs
waypaper_engine_daemon/src/rendering_backends/: mod.rs  scene.rs  video.rs  video_backend_consts.rs  video_wp_renderer.rs
waypaper_engine_daemon/src/rendering_backends/scene/: scene_structs.rs  scene_wp_renderer.rs
waypaper_engine_daemon/src/rendering_backends/video/: decoder.rs  deinterlacer.rs  demuxer.rs  frame_pool.rs  frames.rs  gl.rs  pipeline.rs  utils.rs  video_backend_consts.rs  video_wp_renderer.rs
waypaper_engine_shared/: Cargo.toml
waypaper_engine_shared/src/: ipc.rs  lib.rs  project.rs  serde_utils.rs
waypaper_engine_ui/: package.json  pnpm-lock.yaml
waypaper_engine_ui/src/: index.html  main.js  styles.css
waypaper_engine_ui/src-tauri/: Cargo.toml
waypaper_engine_ui/src-tauri/src/: main.rs
