[package]
name = "waypaper-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
cgmath = "0.18.0"
gl = "0.14.0"
khronos-egl = { version = "6.0.0", features = ["static"] }
libmpv2 = "3.0.0"
serde = "1.0.201"
serde-this-or-that = "0.4.2"
serde_derive = "1.0.201"
serde_json = "1.0.117"
smithay-client-toolkit = "0.18.1"
wayland-egl = "0.32.0"
