[package]
name = "waypaper-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
cgmath = "0.18.0"
fps_counter = "3.0.0"
freeimage = "0.2.2"
gl = "0.14.0"
khronos-egl = { version = "6.0.0", features = ["static"] }
libmpv2 = "3.0.0"
serde = "1.0.201"
serde-this-or-that = "0.4.2"
serde_derive = "1.0.201"
serde_json = "1.0.117"
smithay-client-toolkit = "0.18.1"
wayland-egl = "0.32.0"

[patch.crates-io]
freeimage-sys = {git = "https://github.com/FlashOnFire/freeimage-sys.git", branch = "master"}