[package]
name = "waypaper-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.5.0"
cgmath = "0.18.0"
fps_counter = "3.0.0"
gl = "0.14.0"
khronos-egl = { version = "6.0.0", features = ["static"] }
libmpv2 = "4.0.0"
lz4_flex = "0.11.3"
num_enum = "0.7.2"
num_enum_derive = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde-this-or-that = "0.4.2"
serde_json = "1.0"
smithay-client-toolkit = "0.18.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wayland-egl = "0.32.0"
