[package]
name = "waypaper_engine_daemon"
version = "0.1.0"
authors = ["FlashOnFire"]
edition = "2021"

[dependencies]
bitflags = "2.5.0"
cgmath = "0.18.0"
fps_counter = "3.0.0"
gl = "0.14.0"
image = "0.25.5"
khronos-egl = { version = "6.0.0", features = ["static"] }
libmpv2 = "4.1.0"
linux-ipc = "0.2.1"
lz4_flex = "0.11.3"
num_enum = "0.7.2"
num_enum_derive = "0.7.3"
oneshot = "0.1.8"
serde = { version = "1", features = ["derive"] }
serde-this-or-that = "0.4.2"
serde_json = "1"
smithay-client-toolkit = "0.19.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wayland-egl = "0.32.4"

video-rs = { version = "0.10.2", features = ["ndarray"] }

waypaper_engine_shared = {path = "../waypaper_engine_shared"}
