[package]
name = "waypaper-engine-ui"
version = "0.1.0"
authors = ["FlashOnFire"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_utils = "0.6.2"
serde-this-or-that = "0.4.2"
base64 = "0.22.1"
linux-ipc = "0.2.1"

