[package]
name = "waypaper_engine_ui"
version = "0.1.0"
authors = ["FlashOnFire"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_utils = "0.6.2"
serde-this-or-that = "0.4.2"
base64 = "0.22.1"
linux-ipc = "0.2.1"
xrandr-parser = "0.3.0"

waypaper_engine_shared = {path = "../../waypaper_engine_shared"}